[package]
name = "raymarching"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.14.0", features = ["derive"] }
env_logger = "0.10.1"
log = "0.4.20"
nalgebra = "0.32.3"
pollster = "0.3.0"
raw-window-handle = "0.5"
wgpu = "0.18.0"
winit = "0.28"
