[package]
name = "raymarcher-winit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28"
raymarcher = { path = "../raymarcher" }
env_logger = "0.10.1"
pollster = "0.3.0"
log = "0.4.20"
wgpu = "0.18.0"