[package]
name = "raymarcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.14.0", features = ["derive"] }
log = "0.4.20"
nalgebra = "0.32.3"
raw-window-handle = "0.5"
wgpu = "0.18.0"
