[package]
name = "raymarcherandroid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate_type = ["cdylib"]

[dependencies]
raymarcher = { path = "../../raymarcher" }
env_logger = "0.10.1"
pollster = "0.3.0"
log = "0.4.20"
wgpu = "0.18.0"
android-activity = { path = "android-activity", features = ["game-activity"] }
# android-activity = { version = "0.5.0", features = ["game-activity"] }
android_logger = "0.13.3"
raw-window-handle = "0.5"
ndk = { version = "0.8.0", features = ["rwh_05"] }
ndk-sys = "0.5.0"
